--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,7 @@
 				<div class="row">
 					<div class="header__nav-link"><a class="header__link" href="#">О компании</a><a class="header__link" href="/catalog.html">Каталог продукции</a><a class="header__link" href="#">Доставка</a><a class="header__link" href="/cart-page.html">Оплата</a><a class="header__link" href="#">Госты</a><a class="header__link" href="/contacts.html">Контакты</a></div>
 					<div class="header__date">
-						<div class="header__name">Иван Петров</div><span class="header__stick">|</span><a class="header__exit" href="#">Выйти</a>
+						<div class="header__name">Иван Петров</div><span class="header__stick">|</span><a class="header__exit" href="#" data-popup-open="authorization">Выйти</a>
 					</div>
 				</div>
 			</div>
@@ -164,7 +164,30 @@
 							</div>
 						</div>
 					</div>
-					<div class="section-contact__right">slider</div>
+					<div class="section-contact__right">
+						<div class="slider swiper">
+							<div class="slider__slides swiper-wrapper">
+								<div class="slider__slide swiper-slide">
+									<div class="slider__information-left"><span class="slider__information-subtitle">Металлотека</span><span class="slider__information-left-title">Листовой прокат</span><span class="slider__information-line"></span><span class="slider__information-left-text">Лист горячекатный, лист холоднойкатный</span>
+										<div class="slider__information-left-img-wrapper"><img class="slider__information-left-img" src="/images/min-category3.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
+									</div>
+								</div>
+								<div class="slider__slide swiper-slide">
+									<div class="slider__information-left"><span class="slider__information-subtitle">Металлотека</span><span class="slider__information-left-title">Арматурный прокат</span><span class="slider__information-line"></span><span class="slider__information-left-text">Арматура, профиль, трубный прокат и другие товары</span>
+										<div class="slider__information-left-img-wrapper"><img class="slider__information-left-img" src="/images/min-category2.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
+									</div>
+								</div>
+								<div class="slider__slide swiper-slide">
+									<div class="slider__information-left"><span class="slider__information-subtitle">Металлотека</span><span class="slider__information-left-title">Металопрокат с доставкой</span><span class="slider__information-line"></span><span class="slider__information-left-text">Арматура, профиль, трубный прокат и другие товары</span>
+										<div class="slider__information-left-img-wrapper"><img class="slider__information-left-img" src="/images/min-category1.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
+									</div>
+								</div>
+							</div>
+							<div class="slider__pagination swiper-pagination"></div><svg class="slider__button-next" width="75" height="56" viewBox="0 0 75 56" xmlns="http://www.w3.org/2000/svg">
+								<path d="M0 32.086h58.75L40.832 50l5.836 5.836 27.914-27.918L46.668 0l-5.836 5.836L58.75 23.75H0z" fill="currentColor" fill-rule="nonzero" />
+							</svg>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -987,6 +1010,13 @@
 				</div>
 			</div>
 		</footer>
+	</div>
+	<div class="popup" data-popup="authorization">
+		<div class="popup-authorization popup__body">
+			<div class="popup-authorization__title">Вход в личный кабинет</div>
+			<div class="popup-authorization__line"></div>
+			<form class="popup-authorization__form"><label class="popup-authorization__field-item"><input required="required" /><span>Фамилия Имя</span></label><label class="popup-authorization__field-item"><input required="required" type="number" /><span>ИНН</span></label><label class="popup-authorization__field-item"><input required="required" type="email" /><span>E-mail</span></label><label class="popup-authorization__field-item"><input required="required" type="password" /><span>Пароль</span></label><label class="popup-authorization__field-item"><input required="required" type="tel" /><span>Моб. телефон</span></label><button class="popup-authorization__button-password">Вход</button></form><button class="popup__close">Закрыть</button>
+		</div>
 	</div>
 	<script defer="defer" src="/js/app.js"></script>
 </body>
