--- a/product-details.html
+++ b/product-details.html
@@ -66,7 +66,7 @@
 				<div class="row">
 					<div class="header__nav-link"><a class="header__link" href="#">О компании</a><a class="header__link" href="/catalog.html">Каталог продукции</a><a class="header__link" href="#">Доставка</a><a class="header__link" href="/cart-page.html">Оплата</a><a class="header__link" href="#">Госты</a><a class="header__link" href="/contacts.html">Контакты</a></div>
 					<div class="header__date">
-						<div class="header__name">Иван Петров</div><span class="header__stick">|</span><a class="header__exit" href="#">Выйти</a>
+						<div class="header__name">Иван Петров</div><span class="header__stick">|</span><a class="header__exit" href="#" data-popup-open="authorization">Выйти</a>
 					</div>
 				</div>
 			</div>
@@ -312,10 +312,18 @@
 						<div class="calculation-order">
 							<p class="calculation-order__title">Рассчитайте стоимость заказа</p>
 							<div class="calculation-order__range"></div>
-							<p class="calculation-order__subtitle">Прикрепите вашу смету и наш менеджер сам рассчитает стоимость вашего заказа в соответствии с вашим обьемом</p>
-							<div class="calculation-order__presentation-wrapper"><img class="calculation-order__presentation-img" src="/images/logo.svg" alt="" />
-								<p class="calculation-order__presentation-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</p>
-							</div><button class="calculation-order__btn">Прикрепить смету</button>
+							<div class="calculation-order__description-wrapper">
+								<p class="calculation-order__subtitle">Прикрепите вашу смету и наш менеджер сам рассчитает стоимость вашего заказа в соответствии с вашим обьемом</p>
+								<div class="calculation-order__presentation-wrapper"><img class="calculation-order__presentation-img" src="/images/logo.svg" alt="" />
+									<p class="calculation-order__presentation-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</p>
+								</div><button class="calculation-order__btn btn-start">Прикрепить смету</button>
+							</div>
+							<div class="calculation-order__form-wrapper">
+								<form class="calculation-order__form">
+									<div class="calculation-order__files-wrapper"><a class="calculation-order__file-form" href="#">Смета для расчета «Автомойка».xlsx</a><a class="calculation-order__file-form" href="#">Арматура «Автомойка».doc</a></div><label class="calculation-order__field-item"><input name="name" required="required" /><span>Ваше имя</span></label><label class="calculation-order__field-item"><input name="email" required="required" /><span>E-mail</span></label><label class="calculation-order__field-item"><input name="phone" required="required" /><span>Телефон</span></label><label class="calculation-order__field-item"><textarea name="comment" required="required"></textarea><span>Комментарий</span></label>
+								</form>
+								<p class="calculation-order__form-description">Заполните обязательное поле</p><input class="calculation-order__btn-form" type="submit" />
+							</div><button class="calculation-order__btn btn-end">Закрыть</button>
 							<p class="calculation-order__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p>
 						</div>
 					</div>
@@ -1141,6 +1149,13 @@
 				</div>
 			</div>
 		</footer>
+	</div>
+	<div class="popup" data-popup="authorization">
+		<div class="popup-authorization popup__body">
+			<div class="popup-authorization__title">Вход в личный кабинет</div>
+			<div class="popup-authorization__line"></div>
+			<form class="popup-authorization__form"><label class="popup-authorization__field-item"><input required="required" /><span>Фамилия Имя</span></label><label class="popup-authorization__field-item"><input required="required" type="number" /><span>ИНН</span></label><label class="popup-authorization__field-item"><input required="required" type="email" /><span>E-mail</span></label><label class="popup-authorization__field-item"><input required="required" type="password" /><span>Пароль</span></label><label class="popup-authorization__field-item"><input required="required" type="tel" /><span>Моб. телефон</span></label><button class="popup-authorization__button-password">Вход</button></form><button class="popup__close">Закрыть</button>
+		</div>
 	</div>
 	<script defer="defer" src="/js/app.js"></script>
 </body>
