--- a/contacts.html
+++ b/contacts.html
@@ -165,27 +165,18 @@
 						</div>
 					</div>
 					<div class="section-contact__right">
-						<div class="slider swiper">
+						<div class="slider slider_contact swiper">
 							<div class="slider__slides swiper-wrapper">
 								<div class="slider__slide swiper-slide">
-									<div class="slider__information-left"><span class="slider__information-subtitle">Металлотека</span><span class="slider__information-left-title">Листовой прокат</span><span class="slider__information-line"></span><span class="slider__information-left-text">Лист горячекатный, лист холоднойкатный</span>
-										<div class="slider__information-left-img-wrapper"><img class="slider__information-left-img" src="/images/min-category3.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
-									</div>
+									<div class="slider__information-left"><span class="slider__information-subtitle">Металотека</span><span class="slider__information-left-title">Листовой прокат</span><span class="slider__information-line"></span><span class="slider__information-left-text">Лист горячекатный, лист холоднойкатный</span><img class="slider__information-img" src="/images/logo.svg" alt="Logo" /><img class="slider__information-left-img" src="/images/min-category3.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
 								</div>
 								<div class="slider__slide swiper-slide">
-									<div class="slider__information-left"><span class="slider__information-subtitle">Металлотека</span><span class="slider__information-left-title">Арматурный прокат</span><span class="slider__information-line"></span><span class="slider__information-left-text">Арматура, профиль, трубный прокат и другие товары</span>
-										<div class="slider__information-left-img-wrapper"><img class="slider__information-left-img" src="/images/min-category2.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
-									</div>
+									<div class="slider__information-left"><span class="slider__information-subtitle">Металотека</span><span class="slider__information-left-title">Арматурный прокат</span><span class="slider__information-line"></span><span class="slider__information-left-text">Арматура, профиль, трубный прокат и другие товары</span><img class="slider__information-img" src="/images/logo.svg" alt="Logo" /><img class="slider__information-left-img" src="/images/min-category2.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
 								</div>
 								<div class="slider__slide swiper-slide">
-									<div class="slider__information-left"><span class="slider__information-subtitle">Металлотека</span><span class="slider__information-left-title">Металопрокат с доставкой</span><span class="slider__information-line"></span><span class="slider__information-left-text">Арматура, профиль, трубный прокат и другие товары</span>
-										<div class="slider__information-left-img-wrapper"><img class="slider__information-left-img" src="/images/min-category1.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
-									</div>
+									<div class="slider__information-left"><span class="slider__information-subtitle">Металотека</span><span class="slider__information-left-title">Металопрокат с доставкой</span><span class="slider__information-line"></span><span class="slider__information-left-text">Арматура, профиль, трубный прокат и другие товары</span><img class="slider__information-img" src="/images/logo.svg" alt="Logo" /><img class="slider__information-left-img" src="/images/min-category1.png" alt="Logo" /><span class="slider__information-left-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</span></div>
 								</div>
 							</div>
-							<div class="slider__pagination swiper-pagination"></div><svg class="slider__button-next" width="75" height="56" viewBox="0 0 75 56" xmlns="http://www.w3.org/2000/svg">
-								<path d="M0 32.086h58.75L40.832 50l5.836 5.836 27.914-27.918L46.668 0l-5.836 5.836L58.75 23.75H0z" fill="currentColor" fill-rule="nonzero" />
-							</svg>
 						</div>
 					</div>
 				</div>
