внесение правок в верстку

--- a/categories.html
+++ b/categories.html
@@ -310,10 +310,11 @@
 												</div>
 											</div>
 											<div class="product-list__content">
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Круг алюминиевый 1,5 мм АМГ6</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Круг алюминиевый 1,5 мм АМГ6</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">8 мм</p>
 													</div>
@@ -356,10 +357,11 @@
 															</svg></div>
 													</div>
 												</div>
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Круг алюминиевый 1,5 мм АМГ6</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Круг алюминиевый 1,5 мм АМГ6</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">8 мм</p>
 													</div>
@@ -402,10 +404,11 @@
 															</svg></div>
 													</div>
 												</div>
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Круг алюминиевый 2 мм АМГ6</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Круг алюминиевый 2 мм АМГ6</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">8 мм</p>
 													</div>
@@ -448,10 +451,11 @@
 															</svg></div>
 													</div>
 												</div>
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Круг алюминиевый 6 мм АМГ6</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Круг алюминиевый 6 мм АМГ6</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">8 мм</p>
 													</div>
@@ -494,10 +498,11 @@
 															</svg></div>
 													</div>
 												</div>
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Круг алюминиевый 8 мм АМГ6</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Круг алюминиевый 8 мм АМГ6</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">8 мм</p>
 													</div>
@@ -540,10 +545,11 @@
 															</svg></div>
 													</div>
 												</div>
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Круг алюминиевый 8 мм АМГ6</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Круг алюминиевый 8 мм АМГ6</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">8 мм</p>
 													</div>
@@ -586,10 +592,11 @@
 															</svg></div>
 													</div>
 												</div>
-												<div class="table-product-row">
-													<div class="table-product-row__column">
-														<p class="text">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
-													</div>
+												<div class="table-product-row"><a class="table-product-row__link" href="#">
+														<div class="table-product-row__column">
+															<p class="text">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
+														</div>
+													</a>
 													<div class="table-product-row__column">
 														<p class="text">20 мм</p>
 													</div>
