--- a/order-processing.html
+++ b/order-processing.html
@@ -408,7 +408,7 @@
 				<div class="popup-payment__button"><button class="popup-payment__pay">Оплатить по счету</button><button class="popup-payment__pay">Оплатить онлайн</button><button class="popup-payment__pay">Оплатить в офисе</button></div>
 				<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
 				<div class="popup-payment__inform">
-					<h2 class="popup-payment__subtitle"></h2>
+					<h2 class="popup-payment__subtitle">Оплата резерва</h2>
 					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
 				</div><button class="popup__close">Закрыть</button>
 			</div>
@@ -445,7 +445,44 @@
 				<div class="popup-payment__button"><button class="popup-payment__pay">Оплатить по счету</button><button class="popup-payment__pay" disabled="disabled">Оплатить онлайн</button><button class="popup-payment__pay">Оплатить в офисе</button></div>
 				<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
 				<div class="popup-payment__inform">
-					<h2 class="popup-payment__subtitle"></h2>
+					<h2 class="popup-payment__subtitle">Оплата резерва</h2>
+					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
+				</div><button class="popup__close">Закрыть</button>
+			</div>
+		</div>
+		<div class="popup" data-popup="payment-individual">
+			<div class="popup-payment popup__body">
+				<div class="popup-payment__title">
+					<h2 class="popup-payment__order">Заказ №210522/1-MT</h2>
+					<h2 class="popup-payment__firm">Петров Иван</h2>
+				</div>
+				<hr class="popup-payment__line" noshade="noshade" />
+				<div class="popup-payment__call">
+					<div class="popup-payment__summ popup-payment__summ_left">
+						<p class="popup-payment__total">Итого:</p>
+						<div class="popup-payment__total popup-payment__total_summ">
+							<p class="popup-payment__number popup-payment__number_summ">6 233 944</p>
+							<p class="popup-payment__ruble">р.</p>
+						</div>
+						<div class="popup-payment__trait"></div>
+						<p class="popup-payment__total popup-payment__total_days">≈ 4,548 т</p>
+					</div>
+					<div class="popup-payment__summ popup-payment__summ_center">
+						<p class="popup-payment__total popup-payment__total_bold">Всего наимнований (12) на сумму 6 233 944 руб. (в том числе НДС 20%)</p>
+						<p class="popup-payment__total popup-payment__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
+					</div>
+					<div class="popup-payment__summ popup-payment__summ_right">
+						<p class="popup-payment__total popup-payment__total_mini">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p>
+						<div class="popup-payment__total popup-payment__total_wrap">
+							<div class="popup-payment__link"><a class="popup-payment__download" href="!#">Бланк заказа PDF</a><span class="popup-payment__date">(действителен до 21.05.2022)</span></div>
+							<div class="popup-payment__link"><a class="popup-payment__download" href="!#"></a><span class="popup-payment__date"></span></div>
+						</div>
+					</div>
+				</div>
+				<div class="popup-payment__button"><button class="popup-payment__pay">Оплатить по счету</button><button class="popup-payment__pay">Оплатить онлайн</button><button class="popup-payment__pay">Оплатить в офисе</button></div>
+				<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
+				<div class="popup-payment__inform">
+					<h2 class="popup-payment__subtitle">Оплата заказа</h2>
 					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
 				</div><button class="popup__close">Закрыть</button>
 			</div>
@@ -1234,26 +1271,26 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<div class="popup" data-popup="product-item-details">
-			<div class="product-item-details popup__body">
-				<p class="product-item-details__title">Труба профильная, 5 мм, 3000х60</p>
-				<p class="product-item-details__subtitle">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
-				<div class="product-item-details__filters"><a class="product-item-details__filter-value active" data-filter-categories="Тонны">Тонны</a><a class="product-item-details__filter-value" data-filter-categories="М2">М2</a><a class="product-item-details__filter-value" data-filter-categories="Шт.">Шт.</a></div>
-				<div class="product-item-details__counter-wrapper"><button class="product-item-details__minus"></button>
-					<p class="product-item-details__count">0,015 т</p><button class="product-item-details__plus"></button>
-				</div>
-				<div class="product-item-details__total-wrapper">
-					<p class="product-item-details__total">Итого:</p>
-					<div class="product-item-details__price-wrapper">
-						<p class="product-item-details__total-price">840</p>
-						<p class="product-item-details__value">p.</p>
+			<div class="popup" data-popup="product-item-details">
+				<div class="product-item-details popup__body">
+					<p class="product-item-details__title">Труба профильная, 5 мм, 3000х60</p>
+					<p class="product-item-details__subtitle">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
+					<div class="product-item-details__filters"><a class="product-item-details__filter-value active" data-filter-categories="Тонны">Тонны</a><a class="product-item-details__filter-value" data-filter-categories="М2">М2</a><a class="product-item-details__filter-value" data-filter-categories="Шт.">Шт.</a></div>
+					<div class="product-item-details__counter-wrapper"><button class="product-item-details__minus"></button>
+						<p class="product-item-details__count">0,015 т</p><button class="product-item-details__plus"></button>
 					</div>
-					<p class="product-item-details__measure">≈ 0,015 т / 3 м</p>
-				</div><button class="product-item-details__basket-btn">В корзину</button>
-				<p class="product-item-details__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p><button class="popup__close">Закрыть</button>
+					<div class="product-item-details__total-wrapper">
+						<p class="product-item-details__total">Итого:</p>
+						<div class="product-item-details__price-wrapper">
+							<p class="product-item-details__total-price">840</p>
+							<p class="product-item-details__value">p.</p>
+						</div>
+						<p class="product-item-details__measure">≈ 0,015 т / 3 м</p>
+					</div><button class="product-item-details__basket-btn">В корзину</button>
+					<p class="product-item-details__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p><button class="popup__close">Закрыть</button>
+				</div>
 			</div>
-		</div>
+		</section>
 		<script defer="defer" src="/js/app.js"></script>
 	</body>
 
