--- a/order-reserve.html
+++ b/order-reserve.html
@@ -140,7 +140,7 @@
 											<div class="section-order-reserve__item">
 												<div class="section-order-reserve__item-title">Резерв (1 день)</div>
 												<div class="section-order-reserve__item-text">Резерв товаров из заказа на складе сроком на 24 часа, 1 календарный день.</div>
-												<div class="section-order-reserve__item-sum">10 000 /р.</div><button class="section-order-reserve__item-add">Добавить</button>
+												<div class="section-order-reserve__item-sum">10 000 /р.</div><button class="section-order-reserve__item-add section-order-reserve__item-add_active">Выбрано</button>
 											</div>
 											<div class="section-order-reserve__item">
 												<div class="section-order-reserve__item-title">Резерв (3 дня)</div>
@@ -1070,26 +1070,26 @@
 						</div>
 					</div>
 				</div>
-			</section>
-			<div class="popup" data-popup="product-item-details">
-				<div class="product-item-details popup__body">
-					<p class="product-item-details__title">Труба профильная, 5 мм, 3000х60</p>
-					<p class="product-item-details__subtitle">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
-					<div class="product-item-details__filters"><a class="product-item-details__filter-value active" data-filter-categories="Тонны">Тонны</a><a class="product-item-details__filter-value" data-filter-categories="М2">М2</a><a class="product-item-details__filter-value" data-filter-categories="Шт.">Шт.</a></div>
-					<div class="product-item-details__counter-wrapper"><button class="product-item-details__minus"></button>
-						<p class="product-item-details__count">0,015 т</p><button class="product-item-details__plus"></button>
-					</div>
-					<div class="product-item-details__total-wrapper">
-						<p class="product-item-details__total">Итого:</p>
-						<div class="product-item-details__price-wrapper">
-							<p class="product-item-details__total-price">840</p>
-							<p class="product-item-details__value">p.</p>
+				<div class="popup" data-popup="product-item-details">
+					<div class="product-item-details popup__body">
+						<p class="product-item-details__title">Труба профильная, 5 мм, 3000х60</p>
+						<p class="product-item-details__subtitle">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
+						<div class="product-item-details__filters"><a class="product-item-details__filter-value active" data-filter-categories="Тонны">Тонны</a><a class="product-item-details__filter-value" data-filter-categories="М2">М2</a><a class="product-item-details__filter-value" data-filter-categories="Шт.">Шт.</a></div>
+						<div class="product-item-details__counter-wrapper"><button class="product-item-details__minus"></button>
+							<p class="product-item-details__count">0,015 т</p><button class="product-item-details__plus"></button>
 						</div>
-						<p class="product-item-details__measure">≈ 0,015 т / 3 м</p>
-					</div><button class="product-item-details__basket-btn">В корзину</button>
-					<p class="product-item-details__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p><button class="popup__close">Закрыть</button>
+						<div class="product-item-details__total-wrapper">
+							<p class="product-item-details__total">Итого:</p>
+							<div class="product-item-details__price-wrapper">
+								<p class="product-item-details__total-price">840</p>
+								<p class="product-item-details__value">p.</p>
+							</div>
+							<p class="product-item-details__measure">≈ 0,015 т / 3 м</p>
+						</div><button class="product-item-details__basket-btn">В корзину</button>
+						<p class="product-item-details__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p><button class="popup__close">Закрыть</button>
+					</div>
 				</div>
-			</div>
+			</section>
 		</main>
 		<div class="bg-footer">
 			<footer class="footer">
