--- a/cart-page.html
+++ b/cart-page.html
@@ -86,7 +86,7 @@
 		<main class="main">
 			<section class="section-breadcrumbs">
 				<div class="container">
-					<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/" data-popup-open="payment-entity">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link" data-popup-open="pay-check">Корзина</span></div><a class="section-breadcrumbs__back" href="#" data-popup-open="payment">Назад</a>
+					<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Корзина</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
 				</div>
 			</section>
 			<section class="section-cart block-layout">
