--- a/order-reserve.html
+++ b/order-reserve.html
@@ -86,7 +86,7 @@
 		<main class="main">
 			<section class="section-breadcrumbs">
 				<div class="container">
-					<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/" data-popup-open="payment-entity">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link" data-popup-open="pay-check">Оформление резерва</span></div><a class="section-breadcrumbs__back" href="#" data-popup-open="payment">Назад</a>
+					<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Оформление резерва</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
 				</div>
 			</section>
 			<section class="section-order-reserve block-layout">
@@ -287,7 +287,7 @@
 									<div class="section-order-reserve__txt-onclick section-order-reserve__txt-onclick_mobile">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</div>
 								</div>
 							</div>
-							<div class="section-order-reserve__line-small"></div>
+							<div class="section-order-reserve__line-small section-order-reserve__line-small_none"></div>
 							<div class="section-order-reserve__footer cg-35"><img class="section-order-reserve__qr" src="/images/icon-qr.svg" />
 								<div class="contact-information-footer">
 									<div class="contact-information-footer__name"><span class="contact-information-footer__title">Metaloteka</span>
