--- a/product-details.html
+++ b/product-details.html
@@ -86,7 +86,7 @@
 		<main class="main">
 			<section class="section-breadcrumbs">
 				<div class="container">
-					<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/" data-popup-open="payment-entity">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link" data-popup-open="pay-check">Информация о товаре</span></div><a class="section-breadcrumbs__back" href="#" data-popup-open="payment">Назад</a>
+					<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Информация о товаре</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
 				</div>
 			</section>
 			<section class="section-product-details block-layout block-layout_none-right">
