--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="main main_no-margin-bottom">
+		<main class="main main_no-margin-bottom index">
 			<section class="section-slider">
 				<div class="container">
 					<div class="row">
